@@ -30,7 +30,7 @@ The following options are recognized on the httpd command line:
 <dd>Set the initial value for the
 <A HREF="mod/core.html#serverroot">ServerRoot</A> variable to
 <em>serverroot</em>. This can be overridden by the ServerRoot command in the
-configuration file. The default is <code>/usr/local/etc/httpd</code>.
+configuration file. The default is <code>/usr/local/apache</code>.
 
 <dt><code>-f</code> <em>config</em>
 <dd>Execute the commands in the file <em>config</em> on startup. If
