@@ -488,7 +488,7 @@ different sections are combined when a request is received
 <!--%plaintext &lt;?INDEX {\tt DocumentRoot} directive&gt; -->
 <strong>Syntax:</strong> DocumentRoot <em>directory-filename</em><br>
 <strong>Default:</strong> <code>DocumentRoot
-/usr/local/etc/httpd/htdocs</code><br>
+/usr/local/apache/htdocs</code><br>
 <strong>Context:</strong> server config, virtual host<br>
 <strong>Status:</strong> core<p>
 
@@ -1530,7 +1530,7 @@ use with <a href="../host.html">Host-header based virtual hosts</a>.
 <h2><A name="serverroot">ServerRoot directive</A></h2>
 <!--%plaintext &lt;?INDEX {\tt ServerRoot} directive&gt; -->
 <strong>Syntax:</strong> ServerRoot <em>directory-filename</em><br>
-<strong>Default:</strong> <code>ServerRoot /usr/local/etc/httpd</code><br>
+<strong>Default:</strong> <code>ServerRoot /usr/local/apache</code><br>
 <strong>Context:</strong> server config<br>
 <strong>Status:</strong> core<p>
 
